fixed z-index for filter and menu

--- a/css/filter.css
+++ b/css/filter.css
@@ -15,7 +15,7 @@
     display: grid;
     display: -ms-grid;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     overflow: hidden;
 }
 .filter__icon{
