--- a/css/header.css
+++ b/css/header.css
@@ -116,7 +116,7 @@
         box-sizing: border-box;
         top:75px;
         left: 0;
-        z-index: 2;
+        z-index: 3;
         height: calc(100vh - 75px);
         min-height: 275px;
         width: 100%;
